java-plugin/src/test/cases/error/ConstPrimitive-7-9.java
import io.github.miracelwhipp.constness.annotation.Const;

class ConstPrimitive {

// tag::const-primitive[]
    @Const
    int value = 7; // compile error
// end::const-primitive[]
}

